# Vilinus

./: README.md  army.py  client.py  client_async.py  client_asyncb.py  game.py  main.py  pyproject.toml  sectors.py  server.py  server2.py  server_async.py  start_game_client.py  start_game_server.py  test3.py
conf/: authentication.py  settings.py  teams.py  world.py  world_middle_earth.py
conf/map/: small_world.py
examples/: game_with_allies.py
map/: test.py
src/: army.py  client.py  game.py  log.py  sectors.py  server.py  utils.py
